--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,14 +248,19 @@
     </array>
 
     <string name="our_partners">Our Partners</string>
+    <string name="current_partners">Current Partners</string>
+    <string name="past_partners">Past Partners</string>
     <string name="our_team">Our Team</string>
     <string name="feedback">Give Feedback</string>
 
-    <array name="partners">
+    <array name="current_partners_title">
         <item name="partner_nasa">NASA’s Space Science Education Consortium (NSSEC)</item>
         <item name="partner_wgbh">National Center for Accessible Media, WGBH</item>
         <item name="partner_nfb">National Federation of the Blind</item>
         <item name="partner_science_friday">Science Friday</item>
+    </array>
+
+    <array name="past_partners_title">
         <item name="partner_national_park">National Park Service</item>
         <item name="partner_eclipse_mob">Eclipse Mob</item>
         <item name="partner_smithsonian">Smithsonian Institution</item>
@@ -264,7 +269,7 @@
         <item name="partner_bridham_uni">Brigham Young University, Idaho</item>
     </array>
 
-    <array name="partner_description">
+    <array name="current_partners_desc">
         <item name="nasa_description">NASA (National Aeronautics and Space Administration) is an independent agency of the United States federal government which conducts the civilian space program, aeronautics, and aerospace research.
             NASA is leading an educational outreach effort surrounding eclipses, which includes information and live coverage of these events.
             For more information on NASA, visit nasa.gov. The NASA Space Science Education Consortium (NSSEC) capitalizes on NASA\’s rich history of sharing research and technology through compelling and innovative education projects.
@@ -285,7 +290,9 @@
             They host a radio show distributed by Public Radio International (PRI) and produce science and technology related digital videos, original web articles, and educational resources for educators.
             Science Friday is partnering with Eclipse Soundscapes to provide audio recordings and social media support for the project.
         </item>
+    </array>
 
+    <array name="past_partners_desc">
         <item name="national_park_description">The National Park Service (NPS), an agency of the United States Department of the Interior, manages national parks, monuments, conservation, and historical sites throughout the United States.
             NPS is partnering with Eclipse Soundscapes during the August 2017 Eclipse to collect mono and binaural field recordings in parks across the country, especially those in the path of totality.
             They will collect data the day before, the day of, and the day after the eclipse in order to study how wildlife sounds fluctuate with the changes in light and temperature caused by the eclipse.
@@ -316,11 +323,14 @@
         </item>
     </array>
 
-    <array name="partner_links">
+    <array name="current_partners_link">
         <item name="nasa_link">science.nasa.gov/science-activation-team/nasa-space-science-education-consortium</item>
         <item name="gbh_link">ncam.wgbh.org</item>
         <item name="nfb_link">www.nfb.org</item>
         <item name="science_friday_link">sciencefriday.com</item>
+    </array>
+
+    <array name="past_partners_link">
         <item name="national_park_link">nps.gov/</item>
         <item name="eclipse_mob_link">eclipsemob.org</item>
         <item name="smithsonian_link">si.edu</item>
